# employee-attrition-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/routes/: prediction.py
app/core/: config.py  model_loader.py
app/db/: models.py  session.py
app/models/: threshold_classifier.py
app/schemas/: prediction_history.py  prediction_input.py  prediction_output.py
app/services/: prediction_service.py
artifacts/model/: attrition_threshold_model.joblib
data/: clean_employee_attrition.csv
docs/: database_schema.md
scripts/: create_db.py  load_dataset.py
tests/functional/: test_health.py  test_predict.py
tests/unit/: test_health.py  test_predict.py  test_prediction_service.py
